--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
             <li>Yulong Snow Mountain</li>
         </ul>
         <p>You can know more about it at <a href="https://en.wikipedia.org/wiki/Jade_Dragon_Snow_Mountain">here</a></p>
+        <p>If you want to contact me, please visit my <a href="contacts.html">contact page</a>.</p>
     </body>
 </html>
