--- a/contacts.html
+++ b/contacts.html
@@ -13,13 +13,30 @@
     <title>My contact page</title>
 </head>
 <body>
-    <h1>Contact</h1>
-    <h2>You can contact me via: </h2>
-    <ol>
-        <li>Email</li>
-        <li>Message</li>
-        <li>Comment</li>
-    </ol>
-    <p>If you want to go back to the main page, please click <a href="index.html">here</a>.</p>
+<header>
+    <h1>Jiuru's Personal Website</h1>
+</header>
+    <nav>
+        <h2>Menu Bar</h2>
+        <ul>
+            <li><a href="index.html">Main Page</a></li>
+            <li><a href="photographs/index.html">My Photos</a></li>
+            <li><a href="projects/index.html">Projects</a></li>
+            <li><a href="blogs/index.html">My Blogs</a></li>
+            <li><a href="contacts.html">Contact Me</a></li>
+        </ul>
+        <form>
+            <!-- Search Bar -->
+            <input type="search" name="q" placeholder="Search Something" />
+            <input type="submit" value="Search" />
+        </form>
+    </nav>
+    <main>
+        <h2>You can contact me via: </h2>
+        <ol>
+            <li><a id="email" href="mailto:jiurulyu@gmail.com">Email</a></li>
+            <li>Comment (I will implement this later, maybe)</li>
+        </ol>
+    </main>
 </body>
 </html>
