--- a/projects/cs-253/index.html
+++ b/projects/cs-253/index.html
@@ -32,14 +32,14 @@
         </form>
     </nav>
     <main>
-        <h1>CS 171</h1>
+        <h1>CS 253</h1>
         <section>
             <h2>Description</h2>
         </section>
         <section>
             <h2>Contents</h2>
             <ol>
-                <li><a href="pages/chp1.html">Java Review</a></li>
+                <li><a href="pages"></a></li>
             </ol>
         </section>
     </main>
