--- a/projects/index.html
+++ b/projects/index.html
@@ -59,6 +59,7 @@
                 <ul>
                     <li><a href="https://jrlyu.github.io/qtm110.io/">Introduction to Causal Inference</a></li>
                     <li><a href="files/Mathematical%20Statistics%20I.pdf">Mathematical Statistics I: Probability</a></li>
+                    <li><a href="files/Mathematical%20Statistics%20II.pdf">Mathematical Statistics II: Statistical Inference</a></li>
                     <li><a href="https://jrlyu.github.io/google_analytics.io/">Google Data Analytics Learning Notes</a></li>
                 </ul>
             </section>
@@ -66,6 +67,7 @@
                 <h2>Computer Science</h2>
                 <ul>
                     <li><a href="cs-171/index.html">Object-Oriented Programming & Introduction to Data Structures</a></li>
+                    <li><a href="cs-253/index.html">Introduction to Data Structure and Algorithms</a></li>
                 </ul>
             </section>
             <section>
