--- a/projects/cs-171/pages/chp1.html
+++ b/projects/cs-171/pages/chp1.html
@@ -386,7 +386,7 @@ for (init; term-cond; incr) {
             </section>
         </main>
         <footer>
-            <h3>If you want to contact me, please visit my <a href="contacts.html">contact page</a></h3>
+            <h3>If you want to contact me, please visit my <a href="../../../contacts.html">contact page</a></h3>
         </footer>
     </body>
 </html>
