--- a/contacts.html
+++ b/contacts.html
@@ -14,18 +14,18 @@
 </head>
 <body>
 <header>
-    <h1>Jiuru's Personal Website</h1>
+    <div id="head">Jiuru's Personal Website</div>
 </header>
     <nav>
-        <h2>Menu Bar</h2>
-        <ul>
-            <li><a href="index.html">Main Page</a></li>
-            <li><a href="photographs/index.html">My Photos</a></li>
-            <li><a href="projects/index.html">Projects</a></li>
-            <li><a href="blogs/index.html">My Blogs</a></li>
-            <li><a href="contacts.html">Contact Me</a></li>
-        </ul>
-        <form>
+        <div id="menu">Menu Bar</div>
+        <div class="selection">
+            <button><a href="index.html">Main Page</a></button>
+            <button><a href="photographs/index.html">My Photos</a></button>
+            <button><a href="projects/index.html">Projects</a></button>
+            <button><a href="blogs/index.html">My Blogs</a></button>
+            <button><a href="contacts.html">Contact Me</a></button>
+        </div>
+        <form class="searchBar">
             <!-- Search Bar -->
             <input type="search" name="q" placeholder="Search Something" />
             <input type="submit" value="Search" />
